--- a/src/app/components/careers/careers.component.html
+++ b/src/app/components/careers/careers.component.html
@@ -1,10 +1,13 @@
+<div id="preloader" *ngIf="loading">
+   <div id="status">&nbsp;</div>
+</div>
 <div class="dc_pg_spcHead">
     <div class="main-container">
        <div class="dc_pgHead_wrap text-center" style="background-image:url(./assets/images/head-bg.jpg);">
-          <h1 class="dc_pg_title">Careers</h1>
+          <h1 class="dc_pg_title">{{contact.pagetitle}}</h1>
           <ol class="breadcrumb dc_cstBread f-w-B justify-content-center">
              <li class="breadcrumb-item"><a href="#">Home</a></li>
-             <li class="breadcrumb-item active">Careers</li>
+             <li class="breadcrumb-item active">{{contact.pagetitle}}</li>
           </ol>
        </div>
     </div>
@@ -13,7 +16,7 @@
           <div class="row row_gutter_30">
              <div class="col-md-6">
                 <div class="dc_txtSummary">
-                   <h2 class="headingSec line_H_1 mrg-b-30">Join our team of Animal Lovers</h2>
+                   <h2 class="headingSec line_H_1 mrg-b-30">{{contact.details.heading}}</h2>
                 </div>
                 <div class="hrLine mrg-b-30"></div>
              </div>
@@ -21,15 +24,15 @@
           <div class="row row_gutter_30">
              <div class="col-md-6">
                 <div class="dc_txtSummary">
-                   <div class="dc_txt_summary dc_last_p text-justify">
-                      <p>We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four legged animal to visit us once and we will become friends.</p>
+                   <div class="dc_txt_summary dc_last_p text-justify" [innerHTML]="contact.details.left_content">
+                     
                    </div>
                 </div>
              </div>
              <div class="col-md-6">
                 <div class="dc_txtSummary">
-                   <div class="dc_txt_summary dc_last_p text-justify">
-                      <p>We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four legged animal to visit us once and we will become friends.</p>
+                   <div class="dc_txt_summary dc_last_p text-justify" [innerHTML]="contact.details.right_content">
+                    
                    </div>
                 </div>
              </div>
@@ -43,39 +46,39 @@
                 <div class="dc_About_media_wrap mar-b-30">
                    <ul class="list-unstyled row row_gutter_15 dc_wrapCols_UD">
                       <li class="col-6">
-                         <div class="dc_wrap_abt_Img dc_rds_8"><img class="w-100" src="./assets/images/about-img-1.jpg" alt="" /></div>
+                         <div class="dc_wrap_abt_Img dc_rds_8"><img class="w-100" src="{{contact.details.image1.link}}" alt="{{contact.details.image1.alt}}" /></div>
                       </li>
                       <li class="col-6">
-                         <div class="dc_wrap_abt_Img dc_rds_8"><img class="w-100" src="./assets/images/about-img-2.jpg" alt="" /></div>
+                         <div class="dc_wrap_abt_Img dc_rds_8"><img class="w-100" src="{{contact.details.image2.link}}" alt="{{contact.details.image2.alt}}" /></div>
                       </li>
                       <li class="col-6">
-                         <div class="dc_wrap_abt_Img dc_rds_8"><img class="w-100" src="./assets/images/about-img-1.jpg" alt="" /></div>
+                         <div class="dc_wrap_abt_Img dc_rds_8"><img class="w-100" src="{{contact.details.image3.link}}" alt="{{contact.details.image3.alt}}" /></div>
                       </li>
                       <li class="col-6">
-                         <div class="dc_wrap_abt_Img dc_rds_8"><img class="w-100" src="./assets/images/about-img-2.jpg" alt="" /></div>
+                         <div class="dc_wrap_abt_Img dc_rds_8"><img class="w-100" src="{{contact.details.image4.link}}" alt="{{contact.details.image4.alt}}" /></div>
                       </li>
                    </ul>
                 </div>
              </div>
              <div class="col-md-6">
                 <div class="careers-form">
-                   <form>
+                   <form [formGroup]="career" enctype="multipart/form-data" (ngSubmit)="onSubmit()" >
                       <div class="row_gutter_30">
                          <div class="col-12">
                             <label class="f-s-24 f-w-B cmslabel">What is your name?</label>
-                            <input type="text" class="form-control cmsfield" name="">
+                            <input type="text" class="form-control cmsfield" name="name" formControlName="name">
                          </div>
                          <div class="col-12">
                             <label class="f-s-24 f-w-B cmslabel">What is your Email Address?</label>
-                            <input type="text" class="form-control cmsfield" name="">
+                            <input type="text" class="form-control cmsfield" name="email" formControlName="email">
                          </div>
                          <div class="col-12">
                             <label class="f-s-24 f-w-B cmslabel">Where can we reach you?</label>
-                            <input type="text" class="form-control cmsfield" name="">
+                            <input type="text" class="form-control cmsfield" name="reach" formControlName="reach">
                          </div>
                          <div class="col-12">
                             <label class="f-s-24 f-w-B cmslabel">Tell us something interesting about you</label>
-                            <textarea class="form-control cmsfield tell" rows="5"></textarea>
+                            <textarea class="form-control cmsfield tell" rows="5" name="tell_us" formControlName="tell_us"></textarea>
                          </div>
                          <div class="col-12">
                             <div class="d-flex justify-content-between">
@@ -84,7 +87,7 @@
                                   <div class="input-group ">
                                      <span class="input-group-btn">
                                         <div class="btn btn-default  custom-file-uploader">
-                                           <input type="file" name="file" onchange="this.form.filename.value = this.files.length ? this.files[0].name : ''" />
+                                           <input type="file" name="resume" formControlName="resume">
                                            <i class="fa fa-paperclip"></i>
                                         </div>
                                      </span>
@@ -106,3 +109,4 @@
        </div>
     </div>
  </div>
+ <app-footer-top [dataString]="footersection"></app-footer-top>
