--- a/src/app/components/contact-gurgaon/contact-gurgaon.component.html
+++ b/src/app/components/contact-gurgaon/contact-gurgaon.component.html
@@ -1,3 +1,6 @@
+<div id="preloader" *ngIf="loading">
+   <div id="status">&nbsp;</div>
+</div>
 <div class="dc_pg_spcHead">
     <div class="main-container">
        <div class="dc_pgHead_wrap text-center" style="background-image:url(assets/images/head-bg.jpg);">
