--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,6 @@
+<div id="preloader" *ngIf="loading">
+   <div id="status">&nbsp;</div>
+</div>
 <!-- topsection -->
 <div class="topSlider_sec" *ngIf="homepage.topsection">
     <div class="main-container">
