--- a/src/app/components/ourservices/ourservices.component.html
+++ b/src/app/components/ourservices/ourservices.component.html
@@ -1,3 +1,6 @@
+<div id="preloader" *ngIf="loading">
+   <div id="status">&nbsp;</div>
+</div>
 <div class="dc_pg_spcHead">
     <div class="main-container">
        <div class="dc_pgHead_wrap text-center" style="background-image:url(assets/images/head-bg.jpg);">
@@ -45,7 +48,7 @@
                         
                       </div>
                       <div class="serviceReadMore_Wrap line_H_1 transtn-1">
-                         <a href="#" class="dc_readmore font-rubik">
+                         <a routerLink="/ourservices/service-details/{{data.slug}}" class="dc_readmore font-rubik">
                          Read More
                          </a>
                       </div>
