--- a/src/app/components/ourteam/ourteam.component.html
+++ b/src/app/components/ourteam/ourteam.component.html
@@ -1,3 +1,6 @@
+<div id="preloader" *ngIf="loading">
+   <div id="status">&nbsp;</div>
+</div>
 <div class="dc_pg_spcHead">
   <div class="main-container">
      <div class="dc_pgHead_wrap text-center" style="background-image:url(assets/images/head-bg.jpg);">
@@ -52,7 +55,7 @@
                        <p [innerHTML]="short_desc"></p>
                     </div>
                     <div class="teamRead_more text-center line_H_1">
-                       <a href="#" class="dc_readmore font-rubik f-w-M">
+                       <a routerLink="/Team-Details/{{data.slug}}" class="dc_readmore font-rubik f-w-M">
                        Read More
                        </a>
                     </div>
