--- a/src/app/components/aboutus/aboutus.component.html
+++ b/src/app/components/aboutus/aboutus.component.html
@@ -55,7 +55,7 @@
                     id="dropdownMenuButton">{{aboutData.topsection.button_2_text}}</a>
                  <div ngbDropdownMenu aria-labelledby="dropdownMenuButton" class="dirList">
                     <ul class="dire_listSec mb-0 list-unstyled" *ngFor="let buttondata of aboutData.topsection.locations">
-                       <li class="list-item"> <a href="#" class="direLink" >{{buttondata.name}}</a> </li>
+                       <li class="list-item"> <a [href]="buttondata.link" target="_blank" class="direLink" >{{buttondata.name}}</a> </li>
                     </ul>
                  </div>
               </div>
