--- a/src/app/common/style.css
+++ b/src/app/common/style.css
@@ -8,12 +8,29 @@
 }
 
 .directList .dirList.dropdown-menu.show {
-    transform: translate(22px, 36px) !important;
+    /* transform: translate(2vw, 3.214vw) !important; */
     max-width: 14.583vw;
     width: 100%;
+    padding: 0;
+    margin-top: 0;
 }
 
 .directList .dropdown-toggle::after{
     display: none;
 }
 
+
+::ng-deep .faq_card .card {
+    border: 0;
+}
+
+::ng-deep .faq_card button.btn.btn-link {
+    width: 100%;
+    
+    border-radius: 0;
+    padding: 0;     
+}
+::ng-deep .faq_card button.btn.btn-link:focus{
+    outline: none;
+    box-shadow: none;
+}
