--- a/src/app/components/contact-delhi/contact-delhi.component.html
+++ b/src/app/components/contact-delhi/contact-delhi.component.html
@@ -42,7 +42,7 @@
        <div class="main-container">
           <div class="btnSec text-center">
              <div class="btnSec_wra d-inline" *ngFor="let cn of contact.details.contactlist">
-                <a [href]="cn.slug" class="ml-0 pagebtn pagebtngreen f-w-B">
+                <a [href]="cn.slug" class="pagebtn pagebtngreen f-w-B">
                 {{cn.name}}
                 </a>
              </div>
@@ -65,7 +65,7 @@
                    E-556, Greater Kailash Part-II, New Delhi – 110048
                 </div>
                 <div [innerHTML]="contacts"></div>
-                <div ngbDropdown class="btnSec ">
+                <!-- <div ngbDropdown class="btnSec ">
                    <div class="btnSec_wra d-inline">
                       <a  href="javascript:void(0)"  class="ml-0 pagebtn pagebtnblue f-w-B " ngbDropdownToggle>
                       {{contact.details.button_1_text}}
@@ -76,7 +76,24 @@
                       {{contact.details.button_2_text}}
                       </a>
                    </div>
-                </div>
+                </div> -->
+
+                <div class="commonLinks text-center contactGet">
+                  <ul class="list-unstyled d-flex flex-wrap">
+                     <li class="contactList-item">
+                        <div ngbDropdown class="dropSec position-relative directList">
+                          <a href="javascript:void(0)" class="pagebtn pagebtnblue dc_btn_min f-w-B getDirection" ngbDropdownToggle id="dropdownMenuButton">{{contact.details.button_1_text}}</a>
+         
+                          <div ngbDropdownMenu aria-labelledby="dropdownMenuButton" class="dirList">
+                             <ul class="dire_listSec mb-0 list-unstyled" *ngFor="let buttondata of contact.details.locations">
+                                <li class="list-item"> <a [href]="buttondata.link" target="_blank" class="direLink" >{{buttondata.name}}</a> </li>
+                             </ul>
+                          </div>
+                        </div>
+                     </li>
+                      <li class="contactList-item"><a href="{{contact.details.button_2_link}}" class="pagebtn dc_btn_min f-w-B">{{contact.details.button_2_text}}</a></li>
+                  </ul>
+               </div>
              </div>
              <div class="col-md-6">
                 <div class="row">
