--- a/src/app/components/vacation-boarding/vacation-boarding.component.css
+++ b/src/app/components/vacation-boarding/vacation-boarding.component.css
@@ -1,3 +1,24 @@
 [hidden] {
     display: none !important;
 }
+.faq_card .card .card-header .btn-header-link.collapsed:after {
+    content: "\f107";
+ }
+ .faq_card .card .card-header {
+     padding: 0;
+     border-bottom: solid 1px #E9F0F2;
+     background-color: transparent;
+ }
+ .faq_card .card .btn-header-link {
+     font-size: 1.514vw;
+     letter-spacing: normal;
+     padding: 0;
+     padding-bottom: 1.071vw;    padding-top: 1.071vw;
+ }
+ .faq_card .card .card-body {
+     padding: 1.071vw 0;
+ }
+ .faq_card .card .btn-header-link:focus{outline: none;box-shadow: none;}
+ .faq_card .card {
+    border: none;
+}
