--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -11,7 +11,7 @@
              <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto" *ngIf="headerData">
                     <li class="nav-item" *ngFor="let data of headerData.mainmenu;let i = index">
-                      <a class="nav-link" href="{{data.link}}">{{data.name}}</a>
+                      <a class="nav-link" [routerLink]="data.link">{{data.name}}</a>
                    </li> 
                    <!-- <li class="nav-item">
                       <a class="nav-link" href="https://ardemos.in/dcc/about-dcc">About DCC</a>
